# RaspClock

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
ext/: CMakeLists.txt
src/: main.cpp
src/ui/: clock.cpp  clock.hpp  clock.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  options.cpp  options.hpp  options.ui  settings.cpp  settings.hpp  settings.ui
src/widgets/: SwitchButton.cpp  SwitchButton.hpp  draggable_list.cpp  draggable_list.hpp
